# cis194

./: cis194.cabal  cis194.nix  nixos-20-03.json  pkgs-from-json.nix  release.nix  release0.nix  result  shell.nix  toggle-hoogle.nix
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
src/: AParser.hs  Main.hs  Scrabble.hs  Week1.hs  Week12.hs  Week2.hs  Week3.hs  Week4.hs  Week5.hs  Week6.hs  Week7.hs  Week8.hs
